# SAT

./: .gitignore  LICENSE  Main.hs  ParseDimacs.hs  README.md  SAT.hs  Types.hs  XorMatrix.hs  XorRecovery.hs  sat.cabal
